Se cambio del diseño de waynar, wlogout y rofi con una paleta de colores similar al wallpaper

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor = HDMI-A-1, 1920x1080@60, 1920x0, 1
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
-$navigator = microsoft-edge-stable
+$navigator = brave
 $editor = code
 
 #################
@@ -45,6 +45,9 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
 env = GDK_BACKEND=wayland swaync
 cursor:no_hardware_cursors = true
+
+env = MOZ_ENABLE_WAYLAND,1
+env = MOZ_WEBRENDER,1
 
 ###################
 ### PERMISSIONS ###
@@ -109,8 +112,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 2
 
         vibrancy = 0.1696
     }
@@ -127,6 +130,7 @@ animations {
     bezier = linear,0,0,1,1
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
+    bezier = smoothPop,0.1,0.9,0.2,1.0
 
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
@@ -137,10 +141,10 @@ animations {
     animation = fadeOut, 1, 1.46, almostLinear
     animation = fade, 1, 3.03, quick
     animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = layersIn, 1, 5, smoothPop, popin 80%
+    animation = layersOut, 1, 3, easeOutQuint, popin 90%
+    animation = fadeLayersIn, 1, 4, smoothPop
+    animation = fadeLayersOut, 1, 2.5, almostLinear
     animation = workspaces, 1, 1.94, almostLinear, fade
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
@@ -172,6 +176,11 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+}
+
+misc {
+    vfr = true
+    vrr = 1
 }
 
 
@@ -220,7 +229,9 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 #Menu de wlogout
-bind = $mainMod, BACKSPACE, exec, wlogout
+bind = $mainMod, BACKSPACE, exec, wlogout -l ~/.config/wlogout/layout -C ~/.config/wlogout/style.css -b 6 -T 420 -B 420 -L 200 -R 200 -n --protocol layer-shell
+layerrule = blur on, match:namespace logout_dialog
+layerrule = ignore_alpha 0.3, match:namespace logout_dialog
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
@@ -339,7 +350,6 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
